# labelito

./: .dockerignore  .gitignore  .npmrc  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  conftest.py  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_printer.yml
.github/workflows/: ci.yml  pages.yml  release-please.yml  release.yml
app/: config.py  history.py  loader.py  main.py  mcp.py  media.py  models.py  oidc.py
app/drivers/: __init__.py  base.py  brother_ql.py
app/render/: __init__.py  elements.py  engine.py  i18n.py
app/transports/: __init__.py  base.py  file.py  network.py  snmp.py  usb.py
app/web/: editor.html  history.html  index.html
app/web/partials/: _about.html  _head.html  _icons.html  _nav.html  _token.html
app/web/static/css/: app.css  tokens.css
app/web/static/js/: builder.js  labelito.js
docs/: configuration.md  development.md  known-limitations.md  mcp.md  reverse-proxy.md  snmp-status-feature.md  snmp-status.md  supply-chain.md  template-format.md
scripts/: build-brand-assets.py  build_gallery.py  dev_harness.py  fetch-fonts.sh  fetch-icons.sh
site/: brand.html  gallery.html  index.html
site/assets/: nav.css
templates/: 12-simple-text.yaml  17x54-address.yaml  29-simple-text.yaml  29x90-address.yaml  62-asset-tag.yaml  62-custom-icon.yaml  62-fridge-dated.yaml  62-icon-collection.yaml  62-image.yaml  62-meal-prep.yaml  62-numbered-bin.yaml  62-pantry.yaml  62-shipping-badge.yaml  62-simple-text.yaml  62-storage-box-qr.yaml  62-title-subtitle-qr.yaml  62-title-subtitle.yaml  62-today.yaml  62-two-column.yaml  62x29-address.yaml  address-17x54.yaml  address-29x90.yaml  address.yaml  cable-label.yaml  freezer-dated.yaml  freezer-icon.yaml  fridge-dated.yaml  icon-collection.yaml  pantry.yaml  row-demo.yaml  simple-text-12.yaml  simple-text-29.yaml  storage-box-qr.yaml  title-subtitle-qr.yaml
tests/: conftest.py  test_api.py  test_config.py  test_dither_and_openapi.py  test_docs.py  test_drivers.py  test_gallery_build.py  test_hardware.py  test_history.py  test_i18n.py  test_icon_collections.py  test_inline_templates.py  test_loader.py  test_mcp.py  test_media.py  test_oidc.py  test_openapi.py  test_print_draft.py  test_render.py  test_rotation.py  test_snmp.py  test_transports.py
tests/e2e/: conftest.py  harness.py  test_api.py  test_web_ui.py
tests/render_options/: test_dither.py  test_high_res.py  test_preview_bw.py  test_red.py  test_threshold.py
translations/: de.yaml  en.yaml  es.yaml  fr.yaml  it.yaml  nl.yaml  pl.yaml  pt.yaml
